<resources>

    <string name="app_name">Gestion Articulos</string>

    <!-- Strings for Form -->
    <string name="Code">Codigo:</string>
    <string name="Des">Descripcion:</string>
    <string name="Money">Precio:</string>
    <string name="Stock">Stock:</string>
    <string name="Add">Añadir</string>
    <string name="Update">Cambiar</string>
    <string name="Delete">Eliminar</string>
    <string name="Cancel">Cancelar</string>
    <string name="Num">Cantidad:</string>
    <string name="Date">Fecha:</string>
    <string name="type">Tipo:</string>
    <string name="DateI">Fecha inicio:</string>
    <string name="DateF">Fecha final:</string>
    <string name="category">Categoria</string>
    <string name="save">Guardar</string>
    <string name="todo">TODO</string>
    <string name="code">Codigo:</string>
    <string name="quantity">Cantidad:</string>
    <string name="date">Fecha:</string>
    <string name="dateExample">2000/29/10</string>
    <string name="textviewExample">TextView</string>
    <string name="MoneyWithIVA">Precio con IVA:</string>
    <string name="Entrada">Entrada:</string>
    <string name="Salida">Salida:</string>

    <string-array name="family">
        <item> </item>
        <item>Hardware</item>
        <item>Software</item>
        <item>Altres</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
