<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCodeMovement"
        style="@style/TvShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/code" />

    <TextView
        android:id="@+id/textView9"
        style="@style/TvShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="number"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView8"
        style="@style/TvShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/calendar"
            style="@style/TvShow"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dateExample" />

        <ImageView
            android:id="@+id/calendardata"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_today_black_24dp"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</LinearLayout>