<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textviewCode"
            style="@style/TvShowElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/economica_bold"
            android:text="Code: "
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview1"
            style="@style/TvShowElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/economica_bold"
            android:text="@string/Date"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview2"
            style="@style/TvShowElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/economica_bold"
            android:text="@string/Num"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textview3"
            style="@style/TvShowElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/economica_bold"
            android:text="@string/type"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="181dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCodeM"
            style="@style/TvShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="TextView"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tvDateM"
            style="@style/TvShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="TextView"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tvCanM"
            style="@style/TvShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="TextView"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/tvTypeM"
            style="@style/TvShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="TextView"
            android:textSize="19dp" />


    </LinearLayout>

</LinearLayout>